--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-    "parser": "babel-esling",
+    "parser": "babel-eslint",
     "env": {
           "es6": true,
           "browser": true,
@@ -9,7 +9,8 @@
         "semi": "off",
         "arrow-parens": "off",
         "comma-dangle": "off",
-        "require-jsdoc": "off"
+        "require-jsdoc": "off",
+        "no-undef": "off"
     },
     "extends": ["eslint:recommended", "google"]
 }
